assert-struct/tests/snapshots/maps__exact_length_mismatch.snap
---
source: assert-struct/tests/maps.rs
expression: message
---
assert_struct! failed:

   | TestData {
mismatch:
  --> `data.string_map` (line 19)
   |     string_map: #{"key1": "value1"},
   |                 ^^^^^^^^^^^^^^^^^^^ actual: map with 2 entries
   | }
