assert-struct/tests/snapshots/maps__missing_key.snap
---
source: assert-struct/tests/maps.rs
expression: message
---
assert_struct! failed:

   | TestData {
mismatch:
  --> `data.string_map."missing_key"` (line 19)
   |     "missing_key": #{"missing_key": "value", ..: ..},
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ actual: missing key
   | }
